[OLC2]Proyecto1_2S_201408603/src/olc2/JAVACC/comp.java
/* Generated By:JavaCC: Do not edit this line. comp.java */
package olc2.JAVACC;
import java.io.*;
public class comp implements compConstants {

  final public Nodo Formulario() throws ParseException {
Nodo nuevo = new Nodo("Formulario","");
Nodo val;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PR_PREGUNTA:
      case PR_GRUPO:
      case PR_CICLO:
      case PR_L_OPCION:
      case PR_L_CONFI:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      val = CuerpoForm();
                               nuevo.setListaHojas(val);
    }
                                                             {if (true) return nuevo;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo CuerpoForm() throws ParseException {
Nodo nuevo = new Nodo("CuerpoForm","");
Nodo nuevo3 = new Nodo("GRUPO_PADRE","");
Nodo nuevo2 = new Nodo("CICLO_PADRE","");
Nodo nuevo1 = new Nodo("PREGUNTA","");
Nodo nuevo4 =new Nodo("L_CONFIG ","");
int contadorP =0;
Nodo val=null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PR_PREGUNTA:
      jj_consume_token(PR_PREGUNTA);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PR_TIPO:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_2;
        }
        val = Cuerpo(nuevo3);
                                             nuevo1.setListaHojas(val);
      }
      jj_consume_token(PR_Fin_PREGUNTA);
                                                                                                {if (true) return nuevo1;}
      break;
    case PR_GRUPO:
      jj_consume_token(PR_GRUPO);
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PR_PREGUNTA:
        case PR_GRUPO:
        case PR_CICLO:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_3;
        }
        val = CuerpoGrupo(nuevo3);
                                               nuevo3.setListaHojas(val);
      }
      jj_consume_token(PR_Fin_GRUPO);
                                                                                              {if (true) return nuevo3;}
      break;
    case PR_CICLO:
      jj_consume_token(PR_CICLO);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PR_PREGUNTA:
        case PR_GRUPO:
        case PR_CICLO:
          ;
          break;
        default:
          jj_la1[3] = jj_gen;
          break label_4;
        }
        val = CuerpoCiclo(nuevo2);
                                               nuevo2.setListaHojas(val);
      }
      jj_consume_token(PR_Fin_CICLO);
                                                                                             {if (true) return nuevo2;}
      break;
    case PR_L_OPCION:
      jj_consume_token(PR_L_OPCION);
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PR_NOMBRELISTA:
          ;
          break;
        default:
          jj_la1[4] = jj_gen;
          break label_5;
        }
        val = Cuerpo_Opcion();
      }
      jj_consume_token(PR_Fin_OPCION);
                                                                {if (true) return val;}
      break;
    case PR_L_CONFI:
      val = config();
                        {if (true) return val;}
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Nodo config() throws ParseException {
        Nodo nuevo4 =new Nodo("L_CONFIG ","");
        Nodo val = null;
    jj_consume_token(PR_L_CONFI);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PR_TITULOFORM:
      case PR_IDFORM:
      case PR_ESTILO:
      case PR_IMPORTAR:
      case PR_CODIGO_PRINCIPAL:
      case PR_CODIGO_GLOBAL:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_6;
      }
      val = Cuerpo_Config();
                                            nuevo4.setListaHojas(val);
    }
    jj_consume_token(PR_Fin_CONFI);
                                                                                         {if (true) return nuevo4;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo CuerpoGrupo(Nodo padre) throws ParseException {
        Nodo nuevo = new Nodo("GRUPO","");
        Nodo nuevo1 = new Nodo("CICLO","");
        Nodo val = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PR_PREGUNTA:
      jj_consume_token(PR_PREGUNTA);
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PR_TIPO:
          ;
          break;
        default:
          jj_la1[7] = jj_gen;
          break label_7;
        }
        val = Cuerpo(padre);
      }
      jj_consume_token(PR_Fin_PREGUNTA);
                                                               {if (true) return val;}
      break;
    case PR_GRUPO:
      jj_consume_token(PR_GRUPO);
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PR_PREGUNTA:
        case PR_GRUPO:
        case PR_CICLO:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_8;
        }
        val = CuerpoGrupo(nuevo);
                                               nuevo.setListaHojas(val);
      }
      jj_consume_token(PR_Fin_GRUPO);
                                                                                            {if (true) return nuevo;}
      break;
    case PR_CICLO:
      jj_consume_token(PR_CICLO);
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PR_PREGUNTA:
        case PR_GRUPO:
        case PR_CICLO:
          ;
          break;
        default:
          jj_la1[9] = jj_gen;
          break label_9;
        }
        val = CuerpoCiclo(nuevo1);
                                                nuevo1.setListaHojas(val);
      }
      jj_consume_token(PR_Fin_CICLO);
                                                                                             {if (true) return nuevo1;}
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Nodo CuerpoCiclo(Nodo padre) throws ParseException {
        Nodo nuevo1 = new Nodo("CICLO","");
        Nodo nuevo = new Nodo("GRUPO","");
        Nodo val = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PR_PREGUNTA:
      jj_consume_token(PR_PREGUNTA);
      label_10:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PR_TIPO:
          ;
          break;
        default:
          jj_la1[11] = jj_gen;
          break label_10;
        }
        val = Cuerpo(padre);
      }
      jj_consume_token(PR_Fin_PREGUNTA);
                                                               {if (true) return val;}
      break;
    case PR_GRUPO:
      jj_consume_token(PR_GRUPO);
      label_11:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PR_PREGUNTA:
        case PR_GRUPO:
        case PR_CICLO:
          ;
          break;
        default:
          jj_la1[12] = jj_gen;
          break label_11;
        }
        val = CuerpoGrupo(nuevo);
                                               nuevo.setListaHojas(val);
      }
      jj_consume_token(PR_Fin_GRUPO);
                                                                                            {if (true) return nuevo;}
      break;
    case PR_CICLO:
      jj_consume_token(PR_CICLO);
      label_12:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PR_PREGUNTA:
        case PR_GRUPO:
        case PR_CICLO:
          ;
          break;
        default:
          jj_la1[13] = jj_gen;
          break label_12;
        }
        val = CuerpoCiclo(nuevo1);
                                                nuevo1.setListaHojas(val);
      }
      jj_consume_token(PR_Fin_CICLO);
                                                                                              {if (true) return nuevo1;}
      break;
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Nodo Cuerpo(Nodo grupo) throws ParseException {
        Nodo t=new Nodo("L_ENCABEZADO ","");
        Nodo val;
        String cadena ="";
        String aux = "";
        String ID_pregunta = "";
        boolean asigGrupo = false;
        boolean asigCiclo = false;
    jj_consume_token(PR_TIPO);
    val = TIPO();
                                        t.setListaHojas(val);
                if (val.isGrupo() == true) {
                        asigGrupo = true;
                }
                if (val.isCiclo() == true) {
                        asigCiclo = true;
                }
    jj_consume_token(PR_Fin_TIPO);
    jj_consume_token(PR_IDPREGUNTA);
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ETINI:
        ;
        break;
      default:
        jj_la1[15] = jj_gen;
        break label_13;
      }
      cadena = Etiqueta(grupo, "");
    }
         val = new Nodo("idpregunta", cadena);
         t.setListaHojas(val);
         t.setValor(cadena);
         ID_pregunta = cadena;
         if (asigGrupo == true) {
                 grupo.setValor(cadena);
         }
         if (asigCiclo == true) {
                grupo.setValor(cadena);
        }
    jj_consume_token(PR_Fin_IDPREGUNTA);
    jj_consume_token(PR_ETIQUETA);
    label_14:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ETINI:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_14;
      }
      cadena = Etiqueta(grupo, "");
    }
         val = new Nodo("etiqueta", cadena);  t.setListaHojas(val);
    jj_consume_token(PR_Fin_ETIQUETA);
    label_15:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PR_SUGERIR:
      case PR_CODIGO_PRE:
      case PR_CODIGO_POST:
      case PR_RESTRINGIR:
      case PR_RESTRINGIRMSN:
      case PR_REQUERIDO:
      case PR_REQUERIDOMSN:
      case PR_PREDETERMINADO:
      case PR_APLICABLE:
      case PR_LECTURA:
      case PR_CALCULO:
      case PR_REPETICION:
      case PR_MULTIMEDIA:
      case PR_APARIENCIA:
      case PR_PARAMETRO:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_15;
      }
      val = L_Opcionales(grupo, ID_pregunta);
                                                   t.setListaHojas(val);
    }
                System.out.println("entre4");{if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo TIPO() throws ParseException {
        Nodo nuevo;
 Token val;
Token t ;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PR_texto:
      t = jj_consume_token(PR_texto);
                        {if (true) return nuevo = new Nodo("Tipo",t.image) ;}
      break;
    case PR_entero:
      t = jj_consume_token(PR_entero);
                         {if (true) return nuevo = new Nodo("Tipo",t.image) ;}
      break;
    case PR_decimal:
      t = jj_consume_token(PR_decimal);
                          {if (true) return nuevo = new Nodo("Tipo",t.image) ;}
      break;
    case PR_rango:
      t = jj_consume_token(PR_rango);
                        {if (true) return nuevo = new Nodo("Tipo",t.image) ;}
      break;
    case PR_condicion:
      t = jj_consume_token(PR_condicion);
                            {if (true) return nuevo = new Nodo("Tipo",t.image) ;}
      break;
    case PR_fecha:
      t = jj_consume_token(PR_fecha);
                        {if (true) return nuevo = new Nodo("Tipo",t.image) ;}
      break;
    case PR_hora:
      t = jj_consume_token(PR_hora);
                       {if (true) return nuevo = new Nodo("Tipo",t.image) ;}
      break;
    case PR_fechahora:
      t = jj_consume_token(PR_fechahora);
                            {if (true) return nuevo = new Nodo("Tipo",t.image) ;}
      break;
    case PR_seleccion_uno:
      t = jj_consume_token(PR_seleccion_uno);
      val = jj_consume_token(IDENTIFIER);
                                                  {if (true) return nuevo = new Nodo(t.image,val.image) ;}
      break;
    case PR_seleccion_multiple:
      t = jj_consume_token(PR_seleccion_multiple);
      val = jj_consume_token(IDENTIFIER);
                                                       {if (true) return nuevo = new Nodo(t.image,val.image) ;}
      break;
    case PR_nota:
      t = jj_consume_token(PR_nota);
                      {if (true) return nuevo = new Nodo("Tipo",t.image) ;}
      break;
    case PR_fichero:
      t = jj_consume_token(PR_fichero);
                         {if (true) return nuevo = new Nodo("Tipo",t.image) ;}
      break;
    case PR_calcular:
      t = jj_consume_token(PR_calcular);
                          {if (true) return nuevo = new Nodo("Tipo",t.image) ;}
      break;
    case PR_inicio_grupo:
      t = jj_consume_token(PR_inicio_grupo);
                                nuevo = new Nodo("Tipo",t.image) ; nuevo.setGrupo(true); {if (true) return nuevo;}
      break;
    case PR_finalizar_grupo:
      t = jj_consume_token(PR_finalizar_grupo);
                                 {if (true) return nuevo =  new Nodo("Tipo",t.image) ;}
      break;
    case PR_finalizar_ciclo:
      t = jj_consume_token(PR_finalizar_ciclo);
                                 nuevo = new Nodo("Tipo",t.image) ;  {if (true) return nuevo;}
      break;
    case PR_iniciar_ciclo:
      t = jj_consume_token(PR_iniciar_ciclo);
